--- a/FashionShop-Admin/Views/Contacts/Index.cshtml
+++ b/FashionShop-Admin/Views/Contacts/Index.cshtml
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="~/plugin/datatables/responsive.dataTables.min.css">
     <link rel="stylesheet" href="~/plugin/datatables/dataTables.bootstrap5.min.css">
 }
-@section Scripts {
+@* @section Scripts {
     <script src="~/bundles/dataTables.bundle.js"></script>
     <script>
         $('#myDataTable')
@@ -19,6 +19,10 @@
                     { targets: [-1, -3], className: 'dt-body-right' }
                 ]
             });
+        $('#statusFilter').on('change', function () {
+            var selectedStatus = $(this).val();
+            table.column(6).search(selectedStatus).draw();
+        });
         $('.deleterow').on('click', function () {
             var tablename = $(this).closest('table').DataTable();
             tablename
@@ -30,7 +34,7 @@
         });
     </script>
 
-}
+} *@
 <!-- Body: Body -->
 <div class="body d-flex py-3">
     <div class="container-xxl">
@@ -78,10 +82,13 @@
                                                     <i class="icofont-edit text-success"></i>
                                                 </a>
                                                 @* href="@Url.Action("Edit", "Contacts", new { id = contact.ContactId })" *@
-                                                <form asp-action="Delete" asp-route-id="@contact.ContactId" method="post">
-                                                    <input type="hidden" name="ContactId" value="@contact.ContactId" />
-                                                    <button type="submit" class="btn btn-outline-secondary"><i class="icofont-ui-delete text-danger"></i></button>
-                                                </form>
+
+                                                <button type="submit" class="btn btn-delete btn-outline-secondary"
+                                                        data-id="@contact.ContactId"
+                                                        data-name="@contact.Fullname">
+                                                        <i class="icofont-ui-delete text-danger"></i>
+                                                </button>
+                                                
                                                 
                                             </div>
                                         </td>
@@ -96,3 +103,34 @@
     </div>
 </div>
 
+<script>
+    document.addEventListener("DOMContentLoaded", function () {
+        const deleteButtons = document.querySelectorAll(".btn-delete");
+
+        deleteButtons.forEach(button => {
+            button.addEventListener("click", function () {
+                const id = this.dataset.id;
+                const name = this.dataset.name;
+
+                if (confirm(`Are you sure you want to delete "${name}"?`)) {
+                    fetch(`/Contacts/Delete/${id}`, {
+                        method: "DELETE",
+                        headers: {
+                            "X-Requested-With": "XMLHttpRequest",
+                            "Content-Type": "application/json",
+                        },
+                    })
+                        .then(response => {
+                            if (response.ok) {
+                                alert("Deleted successfully!");
+                                location.reload();
+                            } else {
+                                alert("Failed to delete.");
+                            }
+                        })
+                        .catch(error => console.error("Error:", error));
+                }
+            });
+        });
+    });
+</script>
