--- a/FashionShop-Admin/Views/Products/Create.cshtml
+++ b/FashionShop-Admin/Views/Products/Create.cshtml
@@ -15,7 +15,7 @@
     <div class="container-xxl">
         <div class="row g-3 mb-3 d-flex justify-content-between">
             <h3 class="fw-bold mb-0" style="width: fit-content;">Product Create</h3>
-            <a asp-action="Index" class="btn btn-success" style="width: fit-content;">Về Trang Chủ</a>
+            <a asp-action="Index" class="btn btn-success" style="width: fit-content;">Home</a>
         </div>
         <div class="row g-3 mb-3">
             <form asp-action="Create" method="post" enctype="multipart/form-data">
